# obsidian-backup

./: .gitignore  gradle.properties  mainidea.md  settings.gradle  versions.gradle
.github/workflows/: build.yml
bukkit/: build.gradle  gradle.properties
bukkit/src/main/java/com/obsidian/backup/bukkit/: ObsidianBackupPlugin.java
bukkit/src/main/resources/: plugin.yml
client-cli/: Cargo.toml
client-cli/src/: main.rs
common/: build.gradle
common/src/main/java/com/obsidian/backup/common/: IpcClient.java  IpcProtocol.java  ObsidianConfig.java
fabric/: build.gradle  gradle.properties
fabric/src/main/java/com/obsidian/backup/fabric/: ObsidianBackupFabric.java
fabric/src/main/resources/: fabric.mod.json
forge/: build.gradle  gradle.properties
forge/src/main/java/com/obsidian/backup/forge/: ObsidianBackupForge.java
mod-neoforge/: build.gradle  gradle.properties  settings.gradle
mod-neoforge/src/main/kotlin/com/obsidian/backup/: ObsidianBackupMod.kt
mod-neoforge/src/main/kotlin/com/obsidian/backup/command/: ObsidianCommandRoot.kt
mod-neoforge/src/main/kotlin/com/obsidian/backup/config/: ModConfig.kt
mod-neoforge/src/main/kotlin/com/obsidian/backup/hook/: BackupHooks.kt
mod-neoforge/src/main/kotlin/com/obsidian/backup/ipc/: IpcClient.kt  IpcProtocol.kt
mod-neoforge/src/main/kotlin/com/obsidian/backup/ui/: BossBarIndicator.kt  ChatRenderer.kt
sidecar/: Cargo.toml
sidecar/src/: config.rs  lib.rs  main.rs
sidecar/src/backup/: chunker.rs  mod.rs  scanner.rs  transaction.rs
sidecar/src/ipc/: mod.rs  server.rs
sidecar/src/storage/: index.rs  mod.rs  object_store.rs
sidecar/tests/: integration_test.rs
