[package]
name = "obsidian-cli"
version = "0.1.0"
edition = "2021"
description = "Obsidian Backup CLI - Standalone client for the Obsidian Sidecar daemon"
license = "MIT"

[[bin]]
name = "obsidian"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
colored = "2"
indicatif = "0.17"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
humansize = "2"
